[tool.poetry]
name = "toggl-watcher"
version = "0.1.0"
description = "Periodically check Toggl if something is being tracked and interface with Pushcut."
authors = ["Eric Chen <eric@ericnchen.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
